# pydantic-ai

./: .coveragerc  .coveragerc-all  .coveragerc-durable  .coveragerc-outlines  .env.example  .env.vertex  .gitignore  .peakinfer-metadata.json  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  API_DESIGN.md  BRIEF_BUILTIN_TOOLS_CAP.md  BRIEF_FOR_RUN_STEP.md  BRIEF_OTEL_SPANS.md  BRIEF_TEMPORAL_TOOLSET.md  CAPABILITIES_ANALYSIS.md  CITATION.cff  CLAUDE.md  DOCS-QUESTIONS.md  FIXES_SUMMARY.md  HANDOFF.md  Makefile  NICHE-DOCS.md  PHASE2-PROMPT.md  PHASE3_PROMPT.md  PLAN.md  PROGRESS.md  PR_BODY.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  README.zh.md  REFACTOR_PLAN.md  RESEARCH.md  REVIEW_HANDOFF_OUTPUT_HOOKS.md  TODOS.md  TYPECHECK_FIXES_SUMMARY.md  V2-RULES.md  V2.md  (+41 more)
examples/: README.md  acp_demo.py  acp_stdio_demo.py  pydantic_model.py  pyproject.toml  rag.py  sql_gen.py  stackone_integration.py  weather.py  zhipu_example.py
examples/adapter_ag_ui_examples/: README.md  basic.py  dojo_server.py
examples/adapter_ag_ui_examples/api/: agent.py  agentic_chat.py  agentic_generative_ui.py  human_in_the_loop.py  predictive_state_updates.py  shared_state.py  tool_based_generative_ui.py
examples/ollama-local/: README.md  config.yaml.example  semantic.py  system_prompt.txt
examples/pydantic_ai_ag_ui_examples/: README.md  __init__.py  basic.py  dojo_server.py
examples/pydantic_ai_ag_ui_examples/api/: __init__.py  agent.py  agentic_chat.py  agentic_generative_ui.py  human_in_the_loop.py  predictive_state_updates.py  shared_state.py  tool_based_generative_ui.py
examples/pydantic_ai_ag_ui_examples/cli/: __init__.py  args.py
examples/pydantic_ai_examples/: _rag_common.py  ai-access-control-config.py  ai-access-control.py  ai_agent_with_pydanticai_and_mongodb.ipynb  aml_compliance.py  bank_support.py  bank_support_a2a.py  chat_app.html  chat_app.py  chat_app_surreal.py  chunking_demo.py  contract_analyzer.py  customer_support.py  dakera_memory.py  dakera_memory_agent.py  dashscope_vision.py  data_analyst.py  email_extract_graph.py  emem_geospatial_agent.py  flight_booking.py  flight_booking_grok.py  lancedb_multimodal.py  layered_agents.py  magic_files.py  mcp_server.py  media_qc.py  medical_agent_delegation.py  mem0_memory_example.py  mem0_toolset.py  multimodal_input.py  persistent_memory.py  pinchwork_marketplace.py  pixtral.py  pydantic_model.py  question_graph.py  rag.py  rag_lancedb.py  rag_surrealdb.py  realtime_handoff.py  realtime_text_to_audio.py  (+27 more)
examples/pydantic_ai_examples/ag_ui/: __init__.py
examples/pydantic_ai_examples/ag_ui/api/: __init__.py  agentic_chat.py  agentic_generative_ui.py  human_in_the_loop.py  predictive_state_updates.py  shared_state.py  tool_approval.py  tool_based_generative_ui.py
examples/pydantic_ai_examples/citations/: __init__.py  anthropic.py  google.py  openai_chat_completions.py  openai_responses.py  openrouter.py  perplexity.py
examples/pydantic_ai_examples/code_execution/: __init__.py  batch_operations.py  follow_the_money.py  github_pr_analysis.py  pr_comment_buckets.py
examples/pydantic_ai_examples/code_mode/: __init__.py  batch_operations.py  batch_operations_demo.py  expense_analysis.py  expense_analysis_demo.py  file_processing.py  file_processing_demo.py  follow_the_money.py  modal_runtime_demo.py  pr_comment_buckets.py  sql_analysis_demo.py
examples/pydantic_ai_examples/deep_research/: graph.py  nodes.py
examples/pydantic_ai_examples/dr2/: nodes.py  plan_outline_graph.py
examples/pydantic_ai_examples/evals/: __init__.py  agent.py  custom_evaluators.py  example_01_generate_dataset.py  example_02_add_custom_evaluators.py  example_03_unit_testing.py  example_04_compare_models.py  example_05_multiturn.py  example_06_multiturn_veterinary.py  models.py  multi_turn_conversation.py
examples/pydantic_ai_examples/evals/multi_turn/: __init__.py  core.py  (+2 more)
examples/pydantic_ai_examples/realtime_camera/: README.md  app.py  index.html
examples/pydantic_ai_examples/realtime_finance/: README.md  app.py  data.py  index.html  supervisor.py  voice.py  widgets.py
examples/pydantic_ai_examples/realtime_webrtc/: README.md  app.py  index.html
examples/pydantic_ai_examples/slack_lead_qualifier/: agent.py  app.py  functions.py  modal.py  models.py  slack.py  store.py
examples/pydantic_ai_examples/temporal_streaming/: README.md  __init__.py  agents.py  app_conf.yml  datamodels.py  main.py  streaming_handler.py  utils.py  workflow.py
pydantic_ai_ag_ui/: README.md  pyproject.toml
pydantic_ai_ag_ui/pydantic_ai_ag_ui/: __init__.py  _enums.py  _exceptions.py  adapter.py  deps.py  protocols.py
(+4532 files in other folders)
