[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "pydantic-ai-examples"
dynamic = ["version", "dependencies"]
description = "Examples of how to use Pydantic AI and what it can do."
authors = [
    { name = "Samuel Colvin", email = "samuel@pydantic.dev" },
    { name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" },
    { name = "David Montague", email = "david@pydantic.dev" },
    { name = "Alex Hall", email = "alex@pydantic.dev" },
    { name = "Douwe Maan", email = "douwe@pydantic.dev" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
requires-python = ">=3.10"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = [
    "pydantic-ai-slim[openai,google,groq,anthropic,ag-ui,realtime]=={{ version }}",
    "pydantic-evals=={{ version }}",
    "asyncpg>=0.31.0",
    "fastapi>=0.117.0",
    "logfire[asyncpg,fastapi,sqlite3,httpx]>=3.14.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.17",
    "rich>=13.9.2",
    "uvicorn>=0.32.0",
    "devtools>=0.12.2",
    "gradio>=6.7.0",
    "mcp[cli]>=1.28.1,<2.0",
    "modal>=1.0.4",
    "duckdb>=1.4.2",
    "datasets>=4.0.0",
    "pandas>=2.3.3",
    "twelvelabs>=1.2.8",
    "sounddevice>=0.5.0",
    # On Python 3.14, the locked numpy 2.2.6 has no cp314 wheel and would be
    # source-built in CI. numpy 2.3.2+ ships cp314 wheels, so require it there.
    "numpy>=2.3.2 ; python_version >= '3.14'",
]

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai_examples"]

[tool.uv.sources]
pydantic-ai-slim = { workspace = true }

[tool.ruff]
extend = "../pyproject.toml"
line-length = 88
