[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "pydantic-ai-ag-ui"
dynamic = ["version", "dependencies"]
description = "Convert an AI Agent to speak AG UI! ✨"
authors = [
    { name = "Steven Hartland", email = "steve@rocketscience.gg" },
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
requires-python = ">=3.9"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = [
    "ag-ui-protocol>=0.1.5",
    "pydantic>=2.10",
    "pydantic-ai>=0.3.2",
]

[project.urls]
Homepage = "https://ai.pydantic.dev/ag-ui/pydantic_ai_ag_ui"
Source = "https://github.com/pydantic/pydantic-ai/"
Documentation = "https://ai.pydantic.dev/ag-ui"
Changelog = "https://github.com/pydantic/pydantic-ai/releases"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai_ag_ui"]

[tool.uv.sources]
pydantic-ai = { workspace = true }
